--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -19,3 +19,11 @@ body {
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12),
             0 2px 4px 0 rgba(0,0,0,0.08);
 }
+.nav-gradient {
+  background: linear-gradient(-135deg, #c850c0, #4158d0) !important;
+  
+}
+table.dataTable tbody > tr.selected, table.dataTable tbody > tr > .selected {
+  background: #85c3db !important;
+  color:#FFF !important;
+}
